[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "nx_glabtrie"
version = "0.1.0"
description = "NetworkX implementation of the gLabTrie algorithm"
requires-python = ">=3.11"
dependencies = ["networkx>=3.5"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
reportMissingTypeStubs = false
pythonVersion = "3.13"
